# htmlpack

./: .pylintrc  LICENSE  README.md  pyproject.toml
htmlpack/: __main__.py  htmlpack.py
test_data/: nested_example.html.txt
